@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "9638fd68f40caa2d", 
+  "backup_module_uid": "5e1100048ab875d7", 
+  "backup_module_uoa": "soft", 
+  "control": {
+    "author": "Grigori Fursin", 
+    "author_email": "Grigori.Fursin@cTuning.org", 
+    "author_webpage": "http://fursin.net", 
+    "copyright": "See CK COPYRIGHT.txt for copyright details", 
+    "engine": "CK", 
+    "iso_datetime": "2016-11-08T23:47:06.365414", 
+    "license": "See CK LICENSE.txt for licensing details", 
+    "version": [
+      "1", 
+      "8", 
+      "3", 
+      "2"
+    ]
+  }, 
+  "data_name": "compiler.computecpp"
+}
