@@ -1,0 +1,37 @@
+{
+  "auto_detect": "yes", 
+  "customize": {
+    "add_only_with_version": "yes", 
+    "add_to_path": "yes", 
+    "build_dir_name": "computecpp", 
+    "can_strip_dynamic_lib": "yes", 
+    "check_that_exists": "yes", 
+    "ck_version": 10, 
+    "env_prefix": "CK_ENV_COMPILER_COMPUTECPP", 
+    "languages": [
+      "COMPUTECPP" 
+    ], 
+    "limit_recursion_dir_search": {
+      "linux": 4
+    }, 
+    "only_for_target_os_tags": [
+      "linux"
+    ], 
+    "soft_file": {
+      "linux": "compute++" 
+    }, 
+    "soft_file_from_host_os": "yes", 
+    "soft_path_example": {
+      "linux": "/usr/bin/computecpp" 
+    }, 
+    "soft_version_cmd": {
+      "linux": "--version > $#filename#$ 2>&1" 
+    }
+  }, 
+  "soft_name": "ComputeCPP compiler", 
+  "tags": [
+    "compiler", 
+    "computecpp", 
+    "lang-computecpp"
+  ]
+}
