@@ -1,0 +1,4 @@
+You can download and install latest (or required) 
+ComputeCPP compiler from CodePlay here:
+
+* https://www.codeplay.com/products/computesuite/computecpp
